Added: - more model - sqlite database + entity framework - data services - app settings ( json) - and other changes

--- a/FMS/FMS.csproj
+++ b/FMS/FMS.csproj
@@ -1,13 +1,279 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0-windows8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Remove="Models\ApplicationData\AppData.db" />
+    <None Remove="Models\AppSettings\appsettings.json" />
+    <None Remove="Models\Resources\Icons\WhiteAdd.png" />
+    <None Remove="Models\Resources\Icons\WhiteAddPalletTruck.png" />
+    <None Remove="Models\Resources\Icons\WhiteAddUser.png" />
+    <None Remove="Models\Resources\Icons\WhiteArrow1.png" />
+    <None Remove="Models\Resources\Icons\WhiteArrow2.png" />
+    <None Remove="Models\Resources\Icons\WhiteAutomaticWork.png" />
+    <None Remove="Models\Resources\Icons\WhiteAxisX.png" />
+    <None Remove="Models\Resources\Icons\WhiteAxisY.png" />
+    <None Remove="Models\Resources\Icons\WhiteBattery.png" />
+    <None Remove="Models\Resources\Icons\WhiteCharging.png" />
+    <None Remove="Models\Resources\Icons\WhiteCheckConnection.png" />
+    <None Remove="Models\Resources\Icons\WhiteCloseApp.png" />
+    <None Remove="Models\Resources\Icons\WhiteCommandList.png" />
+    <None Remove="Models\Resources\Icons\WhiteCreateTaskPage.png" />
+    <None Remove="Models\Resources\Icons\WhiteCustomTaskPage.png" />
+    <None Remove="Models\Resources\Icons\WhiteDatatbaseLoad.png" />
+    <None Remove="Models\Resources\Icons\WhiteDatatbaseSave.png" />
+    <None Remove="Models\Resources\Icons\WhiteDelete.png" />
+    <None Remove="Models\Resources\Icons\WhiteDiagnosticMode.png" />
+    <None Remove="Models\Resources\Icons\WhiteEdit.png" />
+    <None Remove="Models\Resources\Icons\WhiteEditTaskPage.png" />
+    <None Remove="Models\Resources\Icons\WhiteForkliftCargoWeight.png" />
+    <None Remove="Models\Resources\Icons\WhiteForkliftDownload.png" />
+    <None Remove="Models\Resources\Icons\WhiteForkliftUpload.png" />
+    <None Remove="Models\Resources\Icons\WhiteForkliftWork.png" />
+    <None Remove="Models\Resources\Icons\WhiteForksHeight.png" />
+    <None Remove="Models\Resources\Icons\WhiteGetLocation.png" />
+    <None Remove="Models\Resources\Icons\WhiteHeight.png" />
+    <None Remove="Models\Resources\Icons\WhiteInitializing.png" />
+    <None Remove="Models\Resources\Icons\WhiteJobCreator.png" />
+    <None Remove="Models\Resources\Icons\WhiteLiveMonitoring.png" />
+    <None Remove="Models\Resources\Icons\WhiteLoad.png" />
+    <None Remove="Models\Resources\Icons\WhiteLocationsPage.png" />
+    <None Remove="Models\Resources\Icons\WhiteLoginMain.png" />
+    <None Remove="Models\Resources\Icons\WhiteLowBattery.png" />
+    <None Remove="Models\Resources\Icons\WhiteManualMode.png" />
+    <None Remove="Models\Resources\Icons\WhiteManualTaskSending.png" />
+    <None Remove="Models\Resources\Icons\WhiteMapLocalization.png" />
+    <None Remove="Models\Resources\Icons\WhiteMenuArrowDown.png" />
+    <None Remove="Models\Resources\Icons\WhiteNavRide.png" />
+    <None Remove="Models\Resources\Icons\WhitePalletTruck.png" />
+    <None Remove="Models\Resources\Icons\WhitePalletUnload.png" />
+    <None Remove="Models\Resources\Icons\WhitePause.png" />
+    <None Remove="Models\Resources\Icons\WhitePlay.png" />
+    <None Remove="Models\Resources\Icons\WhitePWM.png" />
+    <None Remove="Models\Resources\Icons\WhiteRefreshDate.png" />
+    <None Remove="Models\Resources\Icons\WhiteRotation.png" />
+    <None Remove="Models\Resources\Icons\WhiteSpeed.png" />
+    <None Remove="Models\Resources\Icons\WhiteStandby.png" />
+    <None Remove="Models\Resources\Icons\WhiteSteering.png" />
+    <None Remove="Models\Resources\Icons\WhiteStop.png" />
+    <None Remove="Models\Resources\Icons\WhiteTaskArchivePage.png" />
+    <None Remove="Models\Resources\Icons\WhiteTaskList.png" />
+    <None Remove="Models\Resources\Icons\WhiteTEBParameters.png" />
+    <None Remove="Models\Resources\Icons\WhiteTilt.png" />
+    <None Remove="Models\Resources\Icons\WhiteUserLogin.png" />
+    <None Remove="Models\Resources\Icons\WhiteUserLogout.png" />
+    <None Remove="Models\Resources\Icons\WhiteWaitingForChoice.png" />
+    <None Remove="Models\Resources\Icons\WhiteWeight.png" />
+    <None Remove="Models\Resources\Icons\WhiteWorkSafety.png" />
+    <None Remove="Models\Resources\Icons\WhiteWorkState.png" />
+    <None Remove="Models\Resources\Images\backgroundimg1.png" />
+    <None Remove="Models\Resources\Images\Logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Models\ApplicationData\AppData.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\AppSettings\appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteAdd.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteAddPalletTruck.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteAddUser.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteArrow1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteArrow2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteAutomaticWork.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteAxisX.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteAxisY.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteBattery.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteCharging.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteCheckConnection.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteCloseApp.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteCommandList.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteCreateTaskPage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteCustomTaskPage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteDatatbaseLoad.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteDatatbaseSave.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteDelete.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteDiagnosticMode.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteEdit.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteEditTaskPage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteForkliftCargoWeight.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteForkliftDownload.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteForkliftUpload.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteForkliftWork.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteForksHeight.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteGetLocation.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteHeight.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteInitializing.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteJobCreator.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteLiveMonitoring.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteLoad.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteLocationsPage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteLoginMain.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteLowBattery.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteManualMode.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteManualTaskSending.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteMapLocalization.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteMenuArrowDown.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteNavRide.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhitePalletTruck.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhitePalletUnload.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhitePause.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhitePlay.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhitePWM.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteRefreshDate.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteRotation.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteSpeed.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteStandby.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteSteering.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteStop.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteTaskArchivePage.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteTaskList.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteTEBParameters.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteTilt.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteUserLogin.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteUserLogout.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteWaitingForChoice.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteWeight.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteWorkSafety.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\WhiteWorkState.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Images\backgroundimg1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Images\Logo.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="cef.redist.x64" Version="119.4.3" />
@@ -26,6 +292,27 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Serilog" Version="3.1.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Serilog.Enrichers.Environment" Version="2.3.0" />
+    <PackageReference Include="Serilog.Enrichers.Process" Version="2.0.2" />
+    <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
+    <PackageReference Include="Serilog.Exceptions" Version="8.4.0" />
+    <PackageReference Include="Serilog.Expressions" Version="4.0.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+    <PackageReference Include="Serilog.Formatting.Compact" Version="2.0.0" />
+    <PackageReference Include="Serilog.Settings.AppSettings" Version="2.2.2" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="8.0.0" />
+    <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
+    <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Seq" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.Trace" Version="3.0.0" />
     <PackageReference Include="ServiceStack" Version="8.0.0" />
   </ItemGroup>
 
