--- a/FMS/FMS.csproj
+++ b/FMS/FMS.csproj
@@ -10,13 +10,35 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Models\ApplicationData\AppData - kopiować.db" />
     <None Remove="Models\ApplicationData\AppData.db" />
     <None Remove="Models\AppSettings\appsettings.json" />
     <None Remove="Models\Resources\Icons\CloseAppWhite.png" />
+    <None Remove="Models\Resources\Icons\DeleteBlack.png" />
+    <None Remove="Models\Resources\Icons\ForkliftManagementPageWhite.png" />
+    <None Remove="Models\Resources\Icons\LoginButtonBlack.png" />
     <None Remove="Models\Resources\Icons\LoginPageWhite.png" />
+    <None Remove="Models\Resources\Icons\LogoutButtonBlack.png" />
     <None Remove="Models\Resources\Icons\MenuIconWhite.png" />
+    <None Remove="Models\Resources\Icons\SaveBlack.png" />
+    <None Remove="Models\Resources\Icons\UpdateBlack.png" />
     <None Remove="Models\Resources\Images\backgroundimg1.png" />
     <None Remove="Models\Resources\Images\Logo.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Models\Resources\Icons\DeleteBlack.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\ForkliftManagementPageWhite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\LoginButtonBlack.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\LogoutButtonBlack.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -33,6 +55,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\Resources\Icons\MenuIconWhite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\SaveBlack.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\UpdateBlack.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\Resources\Images\backgroundimg1.png">
@@ -52,7 +80,6 @@
     <PackageReference Include="gong-wpf-dragdrop" Version="3.2.1" />
     <PackageReference Include="jQuery" Version="3.7.1" />
     <PackageReference Include="MaterialDesignColors" Version="2.1.4" />
-    <PackageReference Include="MaterialDesignExtensions" Version="3.3.0" />
     <PackageReference Include="MaterialDesignThemes" Version="4.9.0" />
     <PackageReference Include="MaterialDesignThemes.Wpf" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
@@ -86,13 +113,17 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="2.0.0" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.3.0" />
+    <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="6.4.0" />
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="6.0.0" />
     <PackageReference Include="Serilog.Sinks.Trace" Version="3.0.0" />
     <PackageReference Include="ServiceStack" Version="8.0.0" />
     <PackageReference Include="WPF-UI" Version="2.1.0" />
     <PackageReference Include="WpfAnimatedGif" Version="2.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
