--- a/FMS/FMS.csproj
+++ b/FMS/FMS.csproj
@@ -20,6 +20,8 @@
     <None Remove="Models\Resources\Icons\LoginPageWhite.png" />
     <None Remove="Models\Resources\Icons\LogoutButtonBlack.png" />
     <None Remove="Models\Resources\Icons\MenuIconWhite.png" />
+    <None Remove="Models\Resources\Icons\OfflineRed.png" />
+    <None Remove="Models\Resources\Icons\OnlineGreen.png" />
     <None Remove="Models\Resources\Icons\SaveBlack.png" />
     <None Remove="Models\Resources\Icons\UpdateBlack.png" />
     <None Remove="Models\Resources\Images\backgroundimg1.png" />
@@ -43,7 +45,7 @@
 
   <ItemGroup>
     <Content Include="Models\ApplicationData\AppData.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\AppSettings\appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -55,6 +57,12 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\Resources\Icons\MenuIconWhite.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\OfflineRed.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Models\Resources\Icons\OnlineGreen.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Models\Resources\Icons\SaveBlack.png">
